# crc-flex

./: .gitignore  ChangeLog.md  LICENSE  README.md  crc-flex.cabal
bench/: Bench.hs
src/Data/Digest/: CrcFlex.hs
src/Data/Digest/CrcFlex/: Internal.hs
test/: Spec.hs
