cabal-version: 1.12

name:           crc-flex
version:        0.1.0.0
synopsis:       A flexible framework for computing arbitrary Cyclic Redundancy Checks (CRCs)
description:    Please see the README on GitHub at <https://github.com/paulino26/crc-flex#readme>
homepage:       https://github.com/paulino26/crc-flex#readme
bug-reports:    https://github.com/paulino26/crc-flex/issues
author:         Paul Randall
maintainer:     paul-randall2@sky.com
copyright:      Copyright (c) 2020 Paul Randall
license:        MIT
license-file:   LICENSE
category:       data, cryptography, library
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/paulino26/crc-flex

library
  hs-source-dirs:     src
  exposed-modules:    Data.Digest.CrcFlex
                    , Data.Digest.CrcFlex.Internal
  build-depends:      base >=4.7 && <5
                    , array
  default-language:   Haskell2010
  ghc-options:        -Wall

test-suite crc-flex-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:  Paths_crc_flex
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:  base >=4.7 && <5
                , crc-flex
                , hspec
                , bytestring
  default-language: Haskell2010
  ghc-options: -Wall

benchmark crc-flex-benchmarks
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  hs-source-dirs:
    bench
  ghc-options: -O2
  build-depends: base >= 4.7 && <5 
    , crc-flex
    , criterion
  default-language: Haskell2010   
  ghc-options: -Wall 
